# Kruskal-Trees

./: AUTHOR.md  AUTHORS.md  README.md  codemeta.json  coq-kruskal-trees.opam  opam
.github/workflows/: main.yml
theories/: Makefile  _CoqProject  notations.v  tactics.v
theories/examples/: fan_ltree_leaves.v  ltree_finite.v  ltree_leaves.v  rtree_lex.v
theories/list/: list_choice.v  list_decide.v  list_fall.v  list_snoc.v  list_sum.v  list_utils.v
theories/tree/: btree.v  dtree.v  ltree.v  ntree.v  rtree.v  utree.v  vtree.v
theories/vec/: idx.v  vec.v
