opam-version: "2.0"
name: "Coq-Kruskal-Trees"
version: "1.0"
synopsis: "Coq library for manipulating rose trees (ie finitely branching) as used in proof of Kruskal's tree theorem"
description:
  "Several implementations for roses trees are proposed with proper induction principles. Sons are collected into dependent vectors, 
   vectors, lists, etc.}  
maintainer: ["Dominique Larchey-Wendling"]
authors: ["Dominique Larchey-Wendling"]
license: "CeCILL B"
homepage: "https://github.com/DmxLarchey/Kruskal-Trees"
bug-reports: "https://github.com/DmxLarchey/Kruskal-Trees/issues"
depends: [
  "coq" {dev & >= "8.14"}
]

build: [make "-j%{jobs}%"]
run-test: [make "-j%{jobs}%" "test"]
install: [make "install"]

dev-repo: "git+https://github.com:DmxLarchey/Kruskal-Trees.git"
